<resources>
    <string name="app_name">Binners\' Project</string>
    <string name="api_endpoint" translatable="false">"http://binners.herokuapp.com/api/v1.0/"</string>
    <string name="url_donate" translatable="false">"https://www.gifttool.com/donations/Donate?ID=1453&amp;AID=503&amp;PID=4805"</string>
    <string name="packageName">ca.com.androidbinnersproject</string>

    <!-- Strings -->
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="details">Details</string>
    <string name="open">Open</string>
    <string name="home">Home</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="binners">Binners</string>
    <string name="account">Account</string>
    <string name="create_account">Create Account</string>
    <string name="my_profile">My profile</string>
    <string name="login">Log In</string>
    <string name="login_google">Connect with Google</string>
    <string name="login_facebook">Connect with Facebook</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="password">Password</string>
    <string name="create_password">Create password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="request_pickup">Request pickup here</string>
    <string name="history">History</string>
    <string name="ongoing">Ongoing</string>
    <string name="pickup">Pickup</string>
    <string name="donate">Donate</string>

    <!-- Onboarding -->
    <string name="onboarding_1_top">binner \\\`bin-ner\\ – noun</string>
    <string name="onboarding_1_bottom">A person who collects redeemable containers and other things form bins to sustain their livelihood and to divert waste from landfills; a dumpster diver</string>
    <string name="onboarding_2_top">Informal/semi-formal work opportunities</string>
    <string name="onboarding_2_bottom">Stigma surrounding binning</string>
    <string name="onboarding_3_top">The pickup service will connect you to a local binner</string>
    <string name="onboarding_3_bottom">The redeemables empties you donate will</string>
    <string name="onboarding_3_item_1">Support local economy</string>
    <string name="onboarding_3_item_2">Encourage financial independence</string>
    <string name="onboarding_3_item_3">Increase diversion rates</string>




    <string name="txtLoginWith">Log in with</string>
    <string name="createAccount">Create an Account</string>
    <string name="recycler_app_label">RECYCLER</string>
    <string name="recycler_app_logo_contente_description">Binner\'s Project Logo</string>

    <string name="facebook_app_id">934314433288495</string>
    <string name="fabric_id">d78872197696ec6106cdc9761625d9950add5f65</string>
    <string name="fill_login">Please write the e-mail and password correctly!</string>
    <string name="has_no_connection">Please check your internet connection!</string>
    <string name="executing_sign_in">Executing SignIn!</string>
    <string name="login_error">There is a problem on trying to login. Try again!</string>
    <string name="login_invalid">Usename or password invalid. Try again!</string>
    <string name="invalid_email">Please write a valid e-mail</string>
    <string name="create_user_without_permission">We will never post without your permission.</string>
    <string name="create_user_terms_privacy">By signing up I agree to the Binner\'s Project Service Terms and Privacy Policy</string>
    <string name="validation_name">Name should not be empty</string>
    <string name="validation_password">Password should have at least 5 characters</string>
    <string name="forgot_password_title">Forgot your password?</string>
    <string name="forgot_password_message">Enter your email address and we\'ll send you a link to set a new one</string>
    <string name="forgot_password_success">Check your email inbox</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="nav_drawer_labels">
        <item>My Profile</item>
        <item>Donate</item>
        <item>Help</item>
        <item>Binners</item>
        <item>Account</item>
    </string-array>


    <string name="pickup_calendar_info">Please provide your preferred date for a pick-up.</string>
    <string name="pickup_additional_notes_infoOne">Please provide any further instructions for the binner.</string>
    <string name="pickup_additional_notes_infoTwo">"Let\'s make it easy for your local binner to find \nyour bottles and cans! Leave them any \nnotes about where to get the pick-up."</string>
    <string name="pickup_additional_notes_hint">"E.g. Hey! I\'ve left  my bottles and cans for you by \nthe recycling bin in the alleyway."</string>

    <string name="pickup_time_instructions">Please provide your preferred pickup time\nA binner will arrive at the time you specify</string>
    <string name="pickup_instructions_top">Please provide any further instructions\nfor the binner</string>
    <string name="pickup_instructions_main">Let\'s make it easy for your local binner to\nfind your bottles and cans! Leave them any\nnotes about where to get the pick-up</string>
    <string name="pickup_instructions_hint">E.g. Hey! I\'ve left my bottles and cans for you by the recycling bin in the alleyway</string>

    <string name="pickup_bottles_top">Give us a rough estimate of how many\nredeemables you have for pick-up</string>
    <string name="pickup_bottles_advice">(No less than 15 bottles/cans please)</string>
    <string name="pickup_bottles_numberofbottles">Number of bottles</string>
    <string name="pickup_bottles_takepicture">Take a picture</string>
    <string name="pickup_bottles_uploadpicture">Upload a picture</string>


    <string name="home_screen_toolbar_notifications_title">Notifications</string>

    <string name="search_hint">Search on Google Maps</string>
    <string name="pickup_activity_title_date">Set Date</string>
    <string name="pickup_activity_title_time">Set Time</string>
    <string name="pickup_activity_title_bottles">Quantity</string>
    <string name="pickup_activity_title_instructions">Instructions</string>
    <string name="pickup_activity_title_confirm">Review your information</string>
    <string name="pickup_review_label_location">Pick-Up Location</string>
    <string name="label_time">Time</string>
    <string name="label_date">Date</string>
    <string name="label_binner">Binner</string>
    <string name="number_cans_bottles"># Cans &amp; bottles</string>
    <string name="instructions">Instructions</string>
    <string name="pickup_review_post_pickup">Finish your Pick-Up!</string>
    <string name="new_pickup_progress_title" type="id">New Pick-Up</string>
    <string name="new_pickup_progress_message" type="id">Saving Pick-Up</string>
    <string name="new_pickup_menu_next">Next</string>
    <string name="new_pickup_menu_back">Back</string>

    <!-- Rate the Pickup -->
    <string name="rate_pickup_dialog_title">Rate the pickup</string>
    <string name="rate_pickup_dialog_message">Please leave a comment about the service.</string>
    <string name="rate_pickup_dialog_leave_a_comment">Leave a comment</string>
    <!-- End Rate the Pickup -->

    <string name="label_retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>