<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/drawer_menu_my_profile"
      android:icon="@drawable/ic_profile"
      android:title="@string/my_profile" />
    <item
      android:id="@+id/drawer_menu_donate"
      android:icon="@drawable/ic_donate"
      android:title="@string/donate" />
    <item
      android:id="@+id/drawer_menu_binners"
      android:icon="@drawable/ic_binners"
      android:title="@string/binners" />
    <item
      android:id="@+id/drawer_menu_account"
      android:icon="@drawable/ic_account"
      android:title="@string/account" />
    <item
      android:id="@+id/drawer_menu_help"
      android:icon="@drawable/ic_help"
      android:title="@string/help" />
    <item
      android:id="@+id/drawer_menu_logout"
      android:icon="@drawable/ic_logout"
      android:title="@string/logout" />
  </group>
</menu>