<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/green_500"
  android:orientation="vertical"
  android:padding="16dp"
  tools:background="@color/green_500"
  tools:context="ca.com.androidbinnersproject.activities.signin.EmailLoginFragment"
  >

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/TextAppearance.AppCompat.Large.Inverse"
    android:textAlignment="center"
    android:text="@string/forgot_password_title"
    android:layout_marginBottom="24dp"
    />

  <TextView
    android:id="@+id/forgot_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="@string/forgot_password_message"
    android:textAlignment="center"
    android:layout_marginBottom="24dp"
    android:textColor="@color/white"
    android:alpha="0.83"
    />


  <android.support.design.widget.TextInputLayout
    android:id="@+id/forgot_email_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    tools:background="@color/white"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      />

  </android.support.design.widget.TextInputLayout>


  <android.support.v7.widget.AppCompatButton
    android:id="@+id/forgot_reset_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/reset_password"
    android:textColor="@color/green_700"
    app:backgroundTint="@color/white"
    />



</LinearLayout>