<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context="ca.com.androidbinnersproject.activities.signin.CreateAccountFragment"
  android:background="@color/white"
  android:padding="16dp"
  android:orientation="vertical"
  >

  <android.support.design.widget.TextInputLayout
    android:id="@+id/signup_name_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    tools:background="@color/white"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/login_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/name"
      android:inputType="textEmailAddress"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/signup_email_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    tools:background="@color/white"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      />

  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/signup_password_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    tools:background="@color/white"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/create_password"
      android:inputType="textPassword"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/signup_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/create_account"
    android:textColor="@color/green_700"
    app:backgroundTint="@color/white"
    />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_user_terms_privacy"
    android:textAlignment="center"
    android:textSize="12sp"
    android:paddingTop="4dp"
    />

</LinearLayout>
