<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context="ca.com.androidbinnersproject.activities.signin.createAccountFragment"
  tools:background="@color/green_500"
  android:padding="16dp"
  android:orientation="vertical"
  >

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    tools:background="@color/white"
    >

    <EditText
      android:id="@+id/login_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/name"
      android:inputType="textEmailAddress"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    tools:background="@color/white"
    >

    <EditText
      android:id="@+id/login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      />

  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    tools:background="@color/white"

    >

    <EditText
      android:id="@+id/login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/create_password"
      android:inputType="textPassword"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/create_account"
    android:textColor="@color/green_700"
    app:backgroundTint="@color/white"
    />

</LinearLayout>
