<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="ca.com.androidbinnersproject.activities.signin.LoginFragment"
  tools:background="@color/green_400"
  android:padding="16dp"
  android:gravity="bottom"
  >

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.facebook.login.widget.LoginButton
      android:id="@+id/login_facebook_widget"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      />

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/login_facebook_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      app:backgroundTint="@color/facebook"
      android:text="@string/login_facebook"
      android:textColor="@color/white"
      android:textAllCaps="false"
      />
  </FrameLayout>


  <android.support.v7.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"

    app:backgroundTint="@color/google"
    android:text="@string/login_google"
    android:textColor="@color/white"
    android:textAllCaps="false"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/login_signup"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      app:backgroundTint="@color/white"
      android:text="@string/signup"
      android:textColor="@color/green_500"
      />
    <Space
      android:layout_width="8dp"
      android:layout_height="match_parent"/>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/login_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      app:backgroundTint="@color/white"
      android:text="@string/signin"
      android:textColor="@color/green_500"
      />

  </LinearLayout>

</LinearLayout>
