<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/green_500"
  >

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="72dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="4dp"
    >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
      android:id="@+id/pickup_additional_notes_txtInfoOne"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/pickup_additional_notes_infoOne"
      android:textStyle="bold"
      app:layout_marginLeftPercent="6%"
      app:layout_marginRightPercent="6%"
      app:layout_marginTopPercent="6%"/>

    <TextView
      android:id="@+id/pickup_additional_notes_txtInfoTwo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/pickup_additional_notes_infoTwo"
      app:layout_marginLeftPercent="6%"
      app:layout_marginRightPercent="6%"
      app:layout_marginTopPercent="2%"/>

    <EditText
      android:id="@+id/pickup_additional_notes_edtInformation"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/pickupBgColor"
      android:gravity="top"
      android:hint="@string/pickup_additional_notes_hint"
      android:inputType="textMultiLine"
      android:padding="16dp"
      android:textColorHint="@color/grey_300"
      android:textSize="14sp"
      android:layout_marginTop="16dp"
      />

  </LinearLayout>

  </android.support.v7.widget.CardView>



</FrameLayout>